--- a/app/src/main/res/layout/list_item_notification.xml
+++ b/app/src/main/res/layout/list_item_notification.xml
@@ -11,21 +11,27 @@
         android:layout_weight="0.8"
         android:orientation="vertical"
         >
-
         <TextView
-            android:id="@+id/notification_msg"
-            android:layout_width="wrap_content"
+            android:id="@+id/notification_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="A very long invite message to a friend that goes."
+            android:text=""
+            android:textStyle="bold"
+            android:textSize="14sp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/invitation_message"
             android:textSize="14sp" />
 
         <TextView
             android:id="@+id/notification_date"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="08/09/2018"
+            android:text=""
             android:textSize="12sp"
             />
 
@@ -36,7 +42,6 @@
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="vertical"
-       android:padding="2dp"
         android:gravity="right">
 
        <ImageButton
@@ -44,7 +49,7 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
-           android:src="@drawable/ic_action_accept"
+           android:src="@drawable/ic_thumb_up_green"
            android:background="@color/main_theme_1"
            android:padding="10dp"
            />
@@ -53,8 +58,7 @@
            android:id="@+id/notification_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:layout_marginBottom="2dp"
-           android:src="@drawable/ic_action_reject"
+           android:src="@drawable/ic_thumb_down"
            android:background="@color/main_theme_1"
            android:padding="10dp"
            />
