--- a/app/src/main/res/layout/activity_chat_detail.xml
+++ b/app/src/main/res/layout/activity_chat_detail.xml
@@ -206,6 +206,7 @@
                 app:cardUseCompatPadding="true">
 
                 <LinearLayout
+                    android:id="@+id/spam_button"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
