--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -10,6 +10,8 @@
         android:text="test"
         android:layout_gravity="center_horizontal"
         android:textSize="14sp"
+        android:textAlignment="center"
+        android:textStyle="bold"
         android:visibility="gone"
         android:layout_margin="3dp"/>
 
